<resources>

    <string name="app_name">BotonDePanico</string>
    <string name="title_activity_main">Botón de Pánico</string>
    <string name="botonActivar">Activar alarma</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_proceso_de_activacion">Activación</string>

    <!--Activación de alarma  -->
    <string name="title_activity_cancelar">Cancelar alarma</string>
    <string name="alarmaCancelada">Alarma cancelada</string>
    <string name="alarmaActivada">Alarma activada</string>
    <string name="cancelarAlarma">Cancelar alarma</string>

    <!--Envio de SMS  -->
    <string name="title_activity_envio_de_sms">Envío de SMS</string>
    <string name="procesoDeEnvio">Enviando SMS de auxilio</string>
    <string name="avisoSMSEnviado">¡¡¡SMS enviado!!!</string>
    <string name="envioSMS">Confirmar con envio de SMS a un amigo</string>
    <string name="cancelarConSMS">Falsa alarma, enviar SMS de aviso</string>
    <string name="selectionButton">Seleccionar Contacto</string>
    <string name="sendButton">Enviar</string>
    <string name="textoAEnviar">¡Estoy en problemas ayuda!</string>
    <string name="textoAEnviarDePrueba">MENSAJE DE PRUEBA: ¡Estoy en problemas ayuda! </string>
    <string name="enviandoMnsj">Enviando mensaje</string>

    <string name="mnsjEnviado">Mensaje enviado</string>
    <string name="primeroSeleccioneUnContacto">Primero seleccione un contacto</string>
    <string name="mnsjSinFoto">No se puede mostrar la foto del contacto</string>


    <!--Ingreso de datos  -->
    <string name="title_activity_datos_usuario">Registración de Datos</string>
    <string name="Ingrese_su_nombre">Ingrese su nombre</string>
    <string name="Ingrese_su_edad">Ingrese su edad</string>
    <string name="msjeGuardado">Guardado</string>
    <string name="msjeNoGuardado">El usuario no fue guardado</string>

    <!--Archivos  -->
    <string name="datosUsuario">datosUsuario.txt</string>
    <string name="usuariosEnviados">usuariosEnviados.txt</string>
    <string name="msjeContactoEnviadoGuardado">Se ha guardado el usuario notificado para poder cancelar luego</string>
    <string name="msjecontactoEnviadoNoGuardado">No se ha guardado el usuario notificado</string>
    <string name="falsaAlarma">Fue una falsa alarma, gracias de todas formas</string>
    <string name="pruebaFalsaAlarma">MENSAJE DE PRUEBA:Fue una falsa alarma, gracias de todas formas</string>
    <string name="title_activity_opcion_agregar_amigos">opcionAgregarAmigos</string>
    <string name="title_activity_configuracion_inicial">Configuracion Inicial</string>

    <string name="OpcionAgregarAmigos">Agregar Amigos</string>
    <string name="OpcionModificarRegistracionDeUsuario">Modificar Datos</string>


</resources>
