<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lenguajes4.botondepanico.ProcesoDeActivacionActivity">

    <TextView
        android:text="@string/alarmaActivada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/alarmaActivadaLabel"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/envioSMS"
        android:textSize="20dp"
        android:id="@+id/botonConfirmarAlarma"/>

    <Button
        android:id="@+id/botonCancelarAlarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelarAlarma"
        android:textSize="20dp"
        android:layout_below="@+id/botonConfirmarAlarma"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
