<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lenguajes4.botondepanico.EnvioDeSMSActivity">

    <TextView
        android:id="@+id/enviandoSMSLabel"
        android:text="@string/procesoDeEnvio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp" />

    <TextView
        android:id="@+id/SMSEnviadoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avisoSMSEnviado"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botonCancelarConSMS"
        android:text="@string/cancelarConSMS"
        android:textSize="25dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/SMSEnviadoLabel"/>

</RelativeLayout>
